--- a/css/style.css
+++ b/css/style.css
@@ -486,9 +486,35 @@ main .album-content .album-container .descricao-album .album{
   display: flex;
 }
 
-progress {
+progress{
   height: 6px;
   width: 0;
+}
+
+#volume{
+  -webkit-appearance: none;
+  height: 4px;
+  
+}
+
+#volume::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+  background-color: rgb(93, 89, 89);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.barra-v{
+  width: 300px;
+  height: 4px;
+  background-color: #3cff00;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  top: -10px;
 }
 
 .ponto {
