--- a/css/style.css
+++ b/css/style.css
@@ -494,27 +494,22 @@ progress{
 #volume{
   -webkit-appearance: none;
   height: 4px;
-  
+  outline: none;
+  overflow: hidden;
+  background-color: rgb(125, 123, 123);
+  box-shadow:  inset 0 0 5px rgba(0, 0, 0, 1);
 }
 
 #volume::-webkit-slider-thumb{
   -webkit-appearance: none;
   width: 15px;
   height: 15px;
-  background-color: rgb(93, 89, 89);
+  background-color: rgb(255, 255, 255);
   border-radius: 50%;
+  
   cursor: pointer;
-}
-
-.barra-v{
-  width: 300px;
-  height: 4px;
-  background-color: #3cff00;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  position: relative;
-  top: -10px;
+  box-shadow: -407px 0 0 400px #b4b3b3;
+  
 }
 
 .ponto {
