--- a/Spotify/Views/pages/cadastro.html
+++ b/Spotify/Views/pages/cadastro.html
@@ -118,7 +118,7 @@
         <div class="inscrever-se">
           <span>Para saber mais sobre como o Spotify coleta, utiliza, compartilha e protege seus dados pessoais, leia a <a href="https://www.spotify.com/br/legal/privacy-policy/">Política de Privacidade do Spotfy.</a></span>
           <button type="submit">INSCREVER-SE</button>
-          <span class="last-text">Já tem uma conta? <a href="http://localhost/js_projects/spotfy_flexbox/login.html">Faça Login.</a></span>
+          <span class="last-text">Já tem uma conta? <a href="{{constant('INCLUDE_PATH')}}">Faça Login.</a></span>
         </div>
 
       </div><!--form bottom-->     
