--- a/Spotify/Views/pages/login.html
+++ b/Spotify/Views/pages/login.html
@@ -53,7 +53,7 @@
 
         <div class="inscrever-se">
           <h4>Não tem uma conta?</h4>
-          <button type="submit">INSECREVER-SE NO SPOTIFY</button>
+          <button name="inscrever-se" type="submit">INSECREVER-SE NO SPOTIFY</button>
         </div>
       </div><!--form bottom-->     
     </form>
